# Slyce_Invoice

./: .cursorignore  .gitignore  CLAUDE.md  DESIGN.md  LICENSE  README.md  index.html  main.cjs  package-lock.json  package.json  pnpm-lock.yaml  preload.js  tailwind.config.js  vite.config.js
scripts/: addMissingTranslations.js  addTranslationKeys.js  add_items.js  cleanupTranslations.js
src/: App.jsx  index.css  invoice_template.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/templates/: 001_modern.html  002_classic.html  003_minimalist.html
src-tauri/src/: commands.rs  lib.rs
src/components/: BrutalistDatePicker.jsx  InvoicePreviewDialog.jsx  InvoiceTotals.jsx  LoadingOverlay.jsx  SlyceInvoice.jsx  SlyceInvoiceLogic.jsx  TemplateEditor.jsx  ThemeToggle.jsx
src/constants/: businessMappings.js  businessProfile.js  currencies.js  languageMappings.js  titleMappings.js
src/hooks/: useLanguageContext.js  useSlyceInvoice.js
src/i18n/: config.js
src/i18n/locales/: ar.json  (+16 more)
src/lib/: api.js  invoiceGenerator.js  zugferd.js
src/locales/: new-translations.json
src/scripts/: mergeTranslations.js
src/styles/: globals.css
src/templates/:  請求書.html  001_modern.html  003_minimalist.html  Fatura.html  classic.html  classical-invoice.html  factura-template.html  facture-template.html  factuur-template.html  fattura-template.html  fatura-template.html  minimal.html  minimalist-invoice.html  modern.html  Счёт-фактура.html  فاتورة.html  बीजक.html  发票.html  세금계산서.html
src/utils/: dateUtils.js  xrechnung.js
(+35 files in other folders)
